# PTTAutoSign

./: Layerfile  README.md  appveyor.yml  main.py  pyproject.toml
.github/workflows/: trigger_appveyor.yml  trigger_layerci.yml
